--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@tailwindcss/vite": "^4.1.4",
     "axios": "^1.9.0",
     "routerjs": "^2.4.5",
+    "swiper": "^11.2.6",
     "tailwindcss": "^4.1.4"
   }
 }
